 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4407: Allow specifying a replication factor for jarcache (jira.shegalov via rohini)

PIG-4401: Add pattern matching to PluckTuple (cheolsoo)

PIG-2692: Make the Pig unit faciliities more generalizable and update javadocs (razsapps via daijy)

PIG-4379: Make RoundRobinPartitioner public (daijy)

PIG-4378: Better way to fix tez local mode test hanging (daijy)

PIG-4358: Add test cases for utf8 chinese in Pig (nmaheshwari via daijy)

PIG-4370: HBaseStorage should support delete markers (bridiver via daijy)

PIG-4360: HBaseStorage should support setting the timestamp field (bridiver via daijy)

PIG-4337: Split Types and MultiQuery e2e tests into multiple groups (rohini)

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4431: ReadToEndLoader does not close the record reader for the last input split (rdsr via daijy)

PIG-4426: RowNumber(simple) Rank not producing correct results (knoguchi)

PIG-4433: Loading bigdecimal in nested tuple does not work (kpriceyahoo via daijy)

PIG-4410: Fix testRankWithEmptyReduce in tez mode (daijy)

PIG-4392: RANK BY fails when default_parallel is greater than cardinality of field being ranked by (daijy)

PIG-4403: Combining -Dpig.additional.jars.uris with -useHCatalog breaks due to combination
 with colon instead of comma (ovlaere via daijy)

PIG-4402: JavaScript UDF example in the doc is broken (cheolsoo)

PIG-4394: Fix Split_9 and Union_5 e2e failures (rohini)

PIG-4391: Fix TestPigStats test failure (rohini)

PIG-4387: Honor yarn settings in tez-site.xml and optimize dag status fetch (rohini)
