@@ -39,6 +39,9 @@ import org.apache.pig.tools.parameters.ParameterSubstitutionException;
 import org.apache.pig.tools.pigstats.PigStats;
 import org.junit.Test;
 
+import java.nio.charset.Charset;
+import com.google.common.io.Files;
+
 public class TestMain {
     private Log log = LogFactory.getLog(TestMain.class);
 
@@ -125,6 +128,29 @@ public class TestMain {
             fail("Encountered Exception");
         }
     }
+
+    @Test
+    public void testlog4jConf() throws Exception {
+        Properties properties = Main.log4jConfAsProperties(null);
+        assertTrue(properties.isEmpty());
+        properties = Main.log4jConfAsProperties("");
+        assertTrue(properties.isEmpty());
+        // Test for non-existent file
+        properties = Main.log4jConfAsProperties("non-existing-" + System.currentTimeMillis());
+        assertTrue(properties.isEmpty());
+
+        // Create tmp file in under build/test/classes
+        File tmpFile = File.createTempFile("pig-log4jconf", ".properties", new File("build/test/classes"));
+        tmpFile.deleteOnExit();
+        Files.write("A=B", tmpFile, Charset.forName("UTF-8"));
+        // Read it as a resource
+        properties = Main.log4jConfAsProperties(tmpFile.getName());
+        assertEquals("B", properties.getProperty("A"));
+        // Read it as a file
+        properties = Main.log4jConfAsProperties(tmpFile.getAbsolutePath());
+        assertEquals("B", properties.getProperty("A"));
+    }
+
 
     public static class TestNotificationListener2 extends TestNotificationListener {
         protected boolean hadArgs = false;
