@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
  
 IMPROVEMENTS
 
+PIG-4430: Pig should support reading log4j.properties file from classpath as well (rdsr via daijy)
+
 PIG-4407: Allow specifying a replication factor for jarcache (jira.shegalov via rohini)
 
 PIG-4401: Add pattern matching to PluckTuple (cheolsoo)
